--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
             <video id="film-player" class="video-js vjs-default-skin vjs-big-play-centered vjs-16-9" controls preload="auto" fluid="true" poster="https://i.javre.xyz/media/ucover/46924.jpg" crossorigin="anonymous">
 
-<source src="index.m3u8" type="application/x-mpegURL">
+<source src="https://unchls.gslb.ru/hls/UnCen/46924.mp4/index.m3u8" type="application/x-mpegURL">
   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
             </video>
 
