--- a/index.html
+++ b/index.html
@@ -4,3 +4,11 @@
   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
             </video>
 
+
+         <video id="film-player" class="video-js vjs-default-skin vjs-big-play-centered vjs-16-9" controls preload="auto" fluid="true" poster="https://i.javre.xyz/media/ucover/46924.jpg" crossorigin="anonymous">
+
+<source src="46924.mp4/index.m3u8" type="application/x-mpegURL">
+  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+            </video>
+
+
