--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
             </video>
   <div id="player-tool-left">
-<a class="pr-2" href="https://t.irtyc.com/exrbyx296o?url_id=0&aff_id=2059&offer_id=3788&bo=3471,3472,3473,3474,3475&aff_sub=javwatch" target="_blank" id="button_download"><i class="fa fa-download"></i> Download</a>
+<a class="pr-2" href="https://unchls.gslb.ru/hls/UnCen/46924.mp4/index.m3u8" target="_blank" id="button_download"><i class="fa fa-download"></i> Download</a>
 </div>              
